--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <html>
-<head>
-</head>
-<body>
-<h1>Hello World</h1>
-
-<!--Tiger LP Tag-->
-<script type="text/javascript" src="//rs-stg-trc-tag.adtdp.com/t.js"></script>
-<script type="text/javascript">
-  __tigerLp()
-</script>
-<!--Tiger LP Tag-->
-
-</body>
+  <head>
+    <meta name=”robots” content=”noindex,nofollow,noarchive”>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KGQNT2');</script>
+    <!-- End Google Tag Manager -->
+  </head>
+  <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGQNT2"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <h1>Hello World</h1>
+  </body>
 </html>
